--- a/css/style.css
+++ b/css/style.css
@@ -3,22 +3,26 @@
 :root {
     font-family: 'Montserrat', sans-serif;
     --primary-color: #171717;
+    --secondary-color: #3399c4;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 
 }
 
 body {
     display: flex;
+    align-items: center;
+    flex-direction: column;
 
     background-color: var(--primary-color);
-    color: white;
+    color: var(--secondary-color);
 }
 
 header {
     
-    padding: 1rem;
+    padding: 2rem;
 }
 
 main {
@@ -27,7 +31,7 @@ main {
 }
 
 .title-section {
-    padding: 1rem;
+    padding: 2rem;
 }
 
 #datepicker {
@@ -35,6 +39,12 @@ main {
     width: 9rem;
     padding: 00.2rem;
     border-radius: 0.5rem;
+}
+
+.datepicker {
+    font-weight: bold;
+    padding-inline: 1.5rem;
+    
 }
 
 .image-div {
