--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,18 @@ h1 {
 
 }
 
-.titulo-imagem {
+.container {
     display: flex;
+    flex-direction: column;
 }
+
+.row {
+    display: flex;
+    align-items: center;
+    justify-content: ;
+    flex-direction: row;
+}
+
 
 main {
     margin: auto;
