--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 :root {
-    font-family: 'JetBrains Mono', monospace;
+    font-family: 'Chillax', sans-serif;
+
     --primary-color: #1C2840;
     --secondary-color: #FDA9B9;
     margin: 0;
@@ -23,8 +24,9 @@ body {
 header {
     background: rgba(246, 239, 239, 0.08);
     border-radius: 16px;
+    border: 00.1rem solid;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(13.3px);
+    backdrop-filter: blur(20.3px);
     -webkit-backdrop-filter: blur(13.3px);
 }
 
@@ -32,6 +34,7 @@ header,
 h1 {
     color: var(--secondary-color);
     padding: 1.5rem;
+    font-weight: 100;
     
 
 
@@ -51,7 +54,7 @@ h1 {
 .row {
     display: flex;
     align-items: center;
-    justify-content: ;
+    
     flex-direction: row;
 }
 
@@ -73,7 +76,7 @@ main {
 }
 
 .datepicker {
-    font-weight: bold;
+    
     padding-inline: 1rem;
 
 
