--- a/css/style.css
+++ b/css/style.css
@@ -86,8 +86,10 @@ main {
 
 .title-section {
     padding: 1rem;
-    border: 1px solid;
-    border-radius: 2rem
+    margin-block: 2rem;
+    border: 1px solid #FDA9B9;
+    border-radius: 1.2rem;
+    color:#FFFFFF;
 }
 
 #datepicker {
